XMLtoCSV/objects/unpackaged/objects/Event_Attendee_vod__c.object
<CustomObject>
    <fields>
        <fullName>Specialty_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Picklist to capture Speciality for Event Walk-in Attendees</description>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Abdominal Radiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abdominal Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acupuncture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acute Care Pediatrics (APNs only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addiction Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addiction Psychiatry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addiction Psychology &amp; Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrative Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Medicine (Family Medicine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Medicine (Internal Medicine)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adolescent Medicine (Pediatrics)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Congenital Heart Disease (IM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Health (APNs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adult Reconstructive Orthopedics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Heart Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Heart Failure &amp; Transplant Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Practice Dentistry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Surgical Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerospace Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy &amp; Immunology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anatomic Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anatomic/Clinical Pathology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bariatric Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biochemical &amp; Medical Genetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Banking /Transfusion Medicine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Certified Sleep Medicine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>Start Date for the Medical Event</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_PC__c</fullName>
        <description>PCYC Events - MP 12/30/15 - Picklist to capture business address state for walk-in attendees</description>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status of the person invited to the medical event.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invited</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleared_Signature_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Talk_Title_vod__c</fullName>
        <description>Title of the talk given at the event</description>
        <label>Talk Title</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User attending the event.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_Attendee_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PCYC Events Attendee Veteran Affairs indicator</description>
        <label>Veteran Affairs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Walk_In_Status_vod__c</fullName>
        <description>Used to track the status of walk-in attendees at an event.</description>
        <label>Walk-In Status</label>
        <picklist>
            <picklistValues>
                <fullName>Needs_Reconciliation_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_Existing_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_Existing_User_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reconciled_To_New_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dismissed_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_vod__c</fullName>
        <description>Used to store the attendee&apos;s zip code.</description>
        <label>Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Event Attendee</label>
    <nameField>
        <displayFormat>A{000000000}</displayFormat>
        <label>Attendee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Attendees</pluralLabel>
    <recordTypes>
        <fullName>Event_Attendee_vod</fullName>
        <active>true</active>
        <description>Standard record type for Event Attendees</description>
        <label>Event_Attendee_vod</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Attendee_Selection_vod</fullName>
        <active>false</active>
        <description>This rule validates that either an Account, Contact, or User was selected as an Attendee.</description>
        <errorConditionFormula>AND(LEN( Account_vod__c ) &lt; 1,LEN( Contact_vod__c ) &lt; 1,LEN( User_vod__c ) &lt; 1)</errorConditionFormula>
        <errorMessage>An Account, Contact, or User must be selected to save a record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_Attendees_vod</fullName>
        <active>true</active>
        <description>This validation Rule will confirm that only one Account or Contact or User is selected as the Attendee.</description>
        <errorConditionFormula>IF( LEN( Account_vod__c ) &gt; 0 , IF( OR(LEN( Contact_vod__c ) &gt; 0 ,LEN( User_vod__c ) &gt; 0),true,false) , IF( LEN( Contact_vod__c ) &gt; 0 , IF( OR(LEN( Account_vod__c ) &gt; 0 ,LEN( User_vod__c ) &gt; 0),true,false) , IF( LEN( User_vod__c ) &gt; 0 , IF( OR(LEN( Account_vod__c ) &gt; 0 ,LEN( Contact_vod__c ) &gt; 0),true,false) , false)))</errorConditionFormula>
        <errorMessage>Please select only one Account, Contact, or User.</errorMessage>
    </validationRules>
</CustomObject>